--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,14 @@
-sonar.projectKey=rondarchik_Practice
+sonar.projectKey=rondarchik_PracticeTask
 sonar.organization=rondarchik
+
+# This is the name and version displayed in the SonarCloud UI.
+sonar.projectName=PracticeTask
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=Task2/src/
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
+
 sonar.java.binaries=.**
