--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=PracticeTask
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=Task2/src/
+sonar.sources=credit-system/credit-system/src/
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
