--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,9 @@ sonar.projectName=PracticeTask
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=credit-system/credit-system/src/
+sonar.sources=back/credit-system/credit-system/src/,back/jdbc_app/src
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
 sonar.java.binaries=.**
