--- a/back/web-api/pom.xml
+++ b/back/web-api/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.4.2.Final</version> <!-- Check for the latest version on Maven Central -->
+        </dependency>
     </dependencies>
 
     <build>
