add, delete, update user (while without m2m)

--- a/react-front/web-api-front/package.json
+++ b/react-front/web-api-front/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-api-front",
   "version": "0.1.0",
+  "homepage": "/api/users",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
