update sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=PracticeTask
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=back/web-api/src/,back/jdbc_app/src, react-front/web-api-front/src
+sonar.sources=back/web-api/src/,back/jdbc_app/src, react-front/web-api-front/src, angular-front/web-api-front/src
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
