--- a/back/web-api/pom.xml
+++ b/back/web-api/pom.xml
@@ -70,7 +70,7 @@
 
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
 
         <dependency>
